trybuild-qcell/src/compiletest/tlcell-03.stderr
error[E0308]: mismatched types
  --> src/compiletest/tlcell-03.rs:17:31
   |
17 |     let c1mutref = owner_b.rw(&*c1);    // Compile error
   |                            -- ^^^^ expected `&TLCell<MarkerB, _>`, found `&TLCell<MarkerA, u32>`
   |                            |
   |                            arguments to this method are incorrect
   |
   = note: expected reference `&TLCell<MarkerB, _>`
              found reference `&TLCell<MarkerA, u32>`
note: method defined here
  --> $QCELL/src/tlcell.rs
   |
   |     pub fn rw<'a, T: ?Sized>(&'a mut self, tc: &'a TLCell<Q, T>) -> &'a mut T {
   |            ^^
